--- a/user.html
+++ b/user.html
@@ -111,7 +111,7 @@
   iconImg.onload = () => {
     document.getElementById("info").innerHTML = `
       <div style="display: flex; align-items: center; margin-bottom: 10px;">
-        <img src="${iconUrl}" alt="icon" width="60" height="60" style="margin-right: 10px;">
+        <img src="${iconUrl}" alt="icon" width="60" height="60" style="margin-right: 10px; object-fit: cover; border-radius: 5px;">
         <font size="6" color="purple">${name}</font>
       </div>
     `;
@@ -143,3 +143,4 @@
 </script>
 </body>
 </html>
+
