--- a/you.html
+++ b/you.html
@@ -60,7 +60,7 @@
 
   <h1>My page</h1>
   <div style="display: flex; align-items: center;">
-    <img id="iconPreview" src="" alt="icon" width="60" height="60" style="margin-right: 10px;">
+    <img id="iconPreview" src="" alt="icon" width="60" height="60" style="margin-right: 10px; object-fit: cover; border-radius: 5px;">
     <font size="7" color="purple"><p id="currentUser"></p></font>
   </div>
 
@@ -420,3 +420,4 @@ renderVideos();
 </script>
 </body>
 </html>
+
